<resources>
    <string name="app_name">ExperimentOne</string>
    <string name="username">用户名:</string>
    <string name="password">密码:</string>
    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="student">学生</string>
    <string name="teacher">老师</string>
    <string name="party">社团</string>
    <string name="manager">管理者</string>
    <string name="writeusername">请输入用户名</string>
    <string name="writepassword">请输入密码</string>
    <string name="title">中山大学课外体育积分电子认证系统</string>
</resources>
